inputAccessoryViewのボタンを参照しないようにする

--- a/DoneDoneMemo/View/View/KeyboardTextView.xib
+++ b/DoneDoneMemo/View/View/KeyboardTextView.xib
@@ -27,6 +27,9 @@
                         <constraint firstAttribute="width" constant="50" id="bNG-ON-uFM"/>
                     </constraints>
                     <state key="normal" title="Button"/>
+                    <connections>
+                        <action selector="tapButton:" destination="-1" eventType="touchUpInside" id="CHi-4T-ihe"/>
+                    </connections>
                 </button>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="XF8-7f-NkM">
                     <rect key="frame" x="4" y="6" width="258" height="38"/>
