--- a/DoneDoneMemo/View/StoryBoard/MemoViewController.storyboard
+++ b/DoneDoneMemo/View/StoryBoard/MemoViewController.storyboard
@@ -50,7 +50,8 @@
                         <viewLayoutGuide key="safeArea" id="8KY-fY-ZkS"/>
                     </view>
                     <navigationItem key="navigationItem" id="mPz-pf-vsk">
-                        <barButtonItem key="leftBarButtonItem" title="Item" id="lyq-fl-reE">
+                        <barButtonItem key="leftBarButtonItem" image="ic_collection" style="plain" id="lyq-fl-reE">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <action selector="tapListButton:" destination="qy9-3T-TtK" id="C1w-Vi-5UN"/>
                             </connections>
@@ -65,4 +66,7 @@
             <point key="canvasLocation" x="1065" y="-89"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ic_collection" width="24" height="24"/>
+    </resources>
 </document>
