--- a/DoneDoneMemo/View/StoryBoard/MemoSettingsViewController.storyboard
+++ b/DoneDoneMemo/View/StoryBoard/MemoSettingsViewController.storyboard
@@ -32,6 +32,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="xE9-DZ-04h"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="ef2-KG-LfF" id="4AX-Xh-ISv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dTj-Zu-D7T" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
