--- a/DoneDoneMemo/View/StoryBoard/MemoSettingsViewController.storyboard
+++ b/DoneDoneMemo/View/StoryBoard/MemoSettingsViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2rB-Bp-ud8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qcG-go-iLt">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,54 +11,36 @@
     </dependencies>
     <scenes>
         <!--Memo Settings View Controller-->
-        <scene sceneID="6dH-oT-W4e">
+        <scene sceneID="xp3-wm-oK2">
             <objects>
-                <viewController id="2rB-Bp-ud8" customClass="MemoSettingsViewController" customModule="DoneDoneMemo" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="1xV-2S-bXj">
+                <viewController id="qcG-go-iLt" customClass="MemoSettingsViewController" customModule="DoneDoneMemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Eej-rg-Ueg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="ef2-KG-LfF">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <view key="tableFooterView" contentMode="scaleToFill" id="Xcr-Zv-8an">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sEl-vZ-gyL">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                            <state key="normal" title="Save"/>
-                                            <connections>
-                                                <action selector="save:" destination="2rB-Bp-ud8" eventType="touchUpInside" id="Rft-rC-OVo"/>
-                                            </connections>
-                                        </button>
-                                    </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="sEl-vZ-gyL" secondAttribute="trailing" id="2LW-cV-hYX"/>
-                                        <constraint firstItem="sEl-vZ-gyL" firstAttribute="leading" secondItem="Xcr-Zv-8an" secondAttribute="leading" id="TGG-Me-BKa"/>
-                                        <constraint firstItem="sEl-vZ-gyL" firstAttribute="top" secondItem="Xcr-Zv-8an" secondAttribute="top" id="TI0-sL-Um8"/>
-                                        <constraint firstAttribute="bottom" secondItem="sEl-vZ-gyL" secondAttribute="bottom" id="nTp-6O-r9G"/>
-                                    </constraints>
-                                </view>
-                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fvu-30-W3i">
+                                <rect key="frame" x="0.0" y="619" width="375" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="GbQ-W7-3Ms"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="xE9-DZ-04h" firstAttribute="bottom" secondItem="ef2-KG-LfF" secondAttribute="bottom" id="Fmq-08-dEl"/>
-                            <constraint firstItem="ef2-KG-LfF" firstAttribute="top" secondItem="xE9-DZ-04h" secondAttribute="top" id="cpc-0Y-ZJo"/>
-                            <constraint firstItem="xE9-DZ-04h" firstAttribute="trailing" secondItem="ef2-KG-LfF" secondAttribute="trailing" id="yep-Pg-RTj"/>
-                            <constraint firstItem="ef2-KG-LfF" firstAttribute="leading" secondItem="xE9-DZ-04h" secondAttribute="leading" id="yto-YK-5fD"/>
+                            <constraint firstItem="fvu-30-W3i" firstAttribute="leading" secondItem="vmp-6a-9KW" secondAttribute="leading" id="9t5-Xq-pTb"/>
+                            <constraint firstItem="vmp-6a-9KW" firstAttribute="trailing" secondItem="fvu-30-W3i" secondAttribute="trailing" id="sfw-1L-dVo"/>
+                            <constraint firstItem="fvu-30-W3i" firstAttribute="bottom" secondItem="vmp-6a-9KW" secondAttribute="bottom" id="xON-DG-DVT"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="xE9-DZ-04h"/>
+                        <viewLayoutGuide key="safeArea" id="vmp-6a-9KW"/>
                     </view>
                     <connections>
-                        <outlet property="tableView" destination="ef2-KG-LfF" id="4AX-Xh-ISv"/>
+                        <outlet property="saveButton" destination="fvu-30-W3i" id="JJd-cH-NyM"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dTj-Zu-D7T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="88F-O8-yaf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-394" y="90"/>
+            <point key="canvasLocation" x="-714" y="-72"/>
         </scene>
     </scenes>
 </document>
