設定画面のタイトル欄にクリアボタンを表示する

--- a/DoneDoneMemo/View/View/MemoSettingsTitleCell.xib
+++ b/DoneDoneMemo/View/View/MemoSettingsTitleCell.xib
@@ -19,11 +19,11 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dof-hM-0ce">
+                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Dof-hM-0ce">
                         <rect key="frame" x="12" y="0.0" width="308" height="43.5"/>
                         <nil key="textColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <textInputTraits key="textInputTraits"/>
+                        <textInputTraits key="textInputTraits" textContentType="organization-title"/>
                     </textField>
                 </subviews>
                 <constraints>
