--- a/DoneDoneMemo/View/View/MemoCell.xib
+++ b/DoneDoneMemo/View/View/MemoCell.xib
@@ -19,21 +19,31 @@
                 <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJy-mh-o44">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJy-mh-o44">
                         <rect key="frame" x="8" y="8" width="84" height="21"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                         <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZJM-ch-SqM">
+                        <rect key="frame" x="8" y="37" width="84" height="17"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                        <color key="textColor" red="0.29803921568627451" green="0.29803921568627451" blue="0.29803921568627451" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="FJy-mh-o44" secondAttribute="trailing" constant="8" id="7Ur-2u-nck"/>
+                <constraint firstAttribute="trailing" secondItem="ZJM-ch-SqM" secondAttribute="trailing" constant="8" id="cFJ-9T-Zff"/>
+                <constraint firstItem="ZJM-ch-SqM" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="h1n-3t-a8F"/>
                 <constraint firstItem="FJy-mh-o44" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="lzj-ct-CZZ"/>
+                <constraint firstItem="ZJM-ch-SqM" firstAttribute="top" secondItem="FJy-mh-o44" secondAttribute="bottom" constant="8" id="txI-c0-Stm"/>
                 <constraint firstItem="FJy-mh-o44" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="y1v-Rh-5yk"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <connections>
+                <outlet property="remainLabel" destination="ZJM-ch-SqM" id="UNe-jo-fhs"/>
                 <outlet property="titleLabel" destination="FJy-mh-o44" id="bzV-cM-1hR"/>
             </connections>
             <point key="canvasLocation" x="27" y="53"/>
