--- a/DoneDoneMemo/View/StoryBoard/AppSettingsViewController.storyboard
+++ b/DoneDoneMemo/View/StoryBoard/AppSettingsViewController.storyboard
@@ -32,6 +32,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="h16-Nv-4o1"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="chG-MK-pfw" id="SUw-Z3-WJq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ViH-iJ-Qmu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
