--- a/DoneDoneMemo/View/StoryBoard/LicensesViewController.storyboard
+++ b/DoneDoneMemo/View/StoryBoard/LicensesViewController.storyboard
@@ -18,14 +18,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mVT-wT-G7s">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="mVT-wT-G7s">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="eoc-n8-NOm" firstAttribute="bottom" secondItem="mVT-wT-G7s" secondAttribute="bottom" id="OJw-kr-MlG"/>
+                            <constraint firstAttribute="bottom" secondItem="mVT-wT-G7s" secondAttribute="bottom" id="32K-CH-khn"/>
                             <constraint firstItem="mVT-wT-G7s" firstAttribute="top" secondItem="eoc-n8-NOm" secondAttribute="top" id="XxH-DJ-fPU"/>
                             <constraint firstItem="mVT-wT-G7s" firstAttribute="leading" secondItem="eoc-n8-NOm" secondAttribute="leading" id="ZML-O8-OIe"/>
                             <constraint firstItem="eoc-n8-NOm" firstAttribute="trailing" secondItem="mVT-wT-G7s" secondAttribute="trailing" id="oyV-tJ-Ojz"/>
