--- a/DoneDoneMemo/View/StoryBoard/AppSettingsViewController.storyboard
+++ b/DoneDoneMemo/View/StoryBoard/AppSettingsViewController.storyboard
@@ -25,10 +25,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="chG-MK-pfw" firstAttribute="bottom" secondItem="h16-Nv-4o1" secondAttribute="bottom" id="1aM-CJ-3N4"/>
                             <constraint firstItem="chG-MK-pfw" firstAttribute="trailing" secondItem="h16-Nv-4o1" secondAttribute="trailing" id="2u4-FL-6gA"/>
                             <constraint firstItem="chG-MK-pfw" firstAttribute="leading" secondItem="h16-Nv-4o1" secondAttribute="leading" id="J1T-9m-6uU"/>
                             <constraint firstItem="chG-MK-pfw" firstAttribute="top" secondItem="h16-Nv-4o1" secondAttribute="top" id="Os4-T4-GM8"/>
-                            <constraint firstAttribute="bottom" secondItem="chG-MK-pfw" secondAttribute="bottom" id="wzv-w6-Azk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="h16-Nv-4o1"/>
                     </view>
