--- a/DoneDoneMemo/View/StoryBoard/MemoCollectionViewController.storyboard
+++ b/DoneDoneMemo/View/StoryBoard/MemoCollectionViewController.storyboard
@@ -20,7 +20,7 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="sUT-n8-zhw">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.93725490196078431" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="HBC-Hf-zWZ">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -42,8 +42,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="FU7-Qc-aOf" firstAttribute="trailing" secondItem="sUT-n8-zhw" secondAttribute="trailing" id="0xT-Ls-YDe"/>
-                            <constraint firstAttribute="bottom" secondItem="sUT-n8-zhw" secondAttribute="bottom" id="P0y-hd-c5g"/>
                             <constraint firstItem="sUT-n8-zhw" firstAttribute="top" secondItem="FU7-Qc-aOf" secondAttribute="top" id="YZY-2D-yaM"/>
+                            <constraint firstItem="sUT-n8-zhw" firstAttribute="bottom" secondItem="FU7-Qc-aOf" secondAttribute="bottom" id="buQ-vf-BnI"/>
                             <constraint firstItem="sUT-n8-zhw" firstAttribute="leading" secondItem="FU7-Qc-aOf" secondAttribute="leading" id="gTQ-g4-ugb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="FU7-Qc-aOf"/>
