--- a/DoneDoneMemo/View/View/TaskCell.xib
+++ b/DoneDoneMemo/View/View/TaskCell.xib
@@ -20,17 +20,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8jo-Jb-YPc">
-                        <rect key="frame" x="268" y="8" width="44" height="44"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="44" id="f2X-ln-9Hb"/>
-                            <constraint firstAttribute="height" constant="44" id="m1L-TH-yrS"/>
-                        </constraints>
-                        <state key="normal" image="ic_edit"/>
-                        <connections>
-                            <action selector="tapEditButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="bRK-fY-QW9"/>
-                        </connections>
-                    </button>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_checkbox" translatesAutoresizingMaskIntoConstraints="NO" id="Sya-SE-E1o">
                         <rect key="frame" x="12" y="14" width="32" height="32"/>
                         <constraints>
@@ -39,7 +28,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYd-49-X7G">
-                        <rect key="frame" x="52" y="19" width="200" height="22"/>
+                        <rect key="frame" x="52" y="19" width="244" height="22"/>
                         <attributedString key="attributedText">
                             <fragment content="Label">
                                 <attributes>
@@ -51,19 +40,16 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="8jo-Jb-YPc" secondAttribute="trailing" constant="8" id="D5L-mI-PdE"/>
                     <constraint firstItem="KYd-49-X7G" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="Mck-05-NDR"/>
                     <constraint firstAttribute="bottomMargin" secondItem="KYd-49-X7G" secondAttribute="bottom" constant="8" id="Ye0-ci-RTp"/>
                     <constraint firstItem="KYd-49-X7G" firstAttribute="leading" secondItem="Sya-SE-E1o" secondAttribute="trailing" constant="8" id="de9-0L-GKM"/>
-                    <constraint firstItem="8jo-Jb-YPc" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="eNr-1P-taP"/>
                     <constraint firstItem="Sya-SE-E1o" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="fGG-6t-YBb"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="KYd-49-X7G" secondAttribute="trailing" constant="8" id="ngr-Uy-FLs"/>
                     <constraint firstItem="Sya-SE-E1o" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="plw-Ru-LJO"/>
-                    <constraint firstItem="8jo-Jb-YPc" firstAttribute="leading" secondItem="KYd-49-X7G" secondAttribute="trailing" constant="16" id="tcO-c1-KF2"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="editButton" destination="8jo-Jb-YPc" id="qYC-uL-luL"/>
                 <outlet property="iconView" destination="Sya-SE-E1o" id="2Ea-Na-h1n"/>
                 <outlet property="titleLabel" destination="KYd-49-X7G" id="kte-SC-NTU"/>
             </connections>
@@ -72,6 +58,5 @@
     </objects>
     <resources>
         <image name="ic_checkbox" width="24" height="24"/>
-        <image name="ic_edit" width="24" height="24"/>
     </resources>
 </document>
