--- a/DoneDoneMemo/View/View/KeyboardTextView.xib
+++ b/DoneDoneMemo/View/View/KeyboardTextView.xib
@@ -35,7 +35,7 @@
                     <rect key="frame" x="4" y="6" width="258" height="38"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" spellCheckingType="no" returnKeyType="next"/>
+                    <textInputTraits key="textInputTraits" spellCheckingType="no" returnKeyType="done"/>
                 </textField>
             </subviews>
             <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
