--- a/DoneDoneMemo/View/View/KeyboardTextView.xib
+++ b/DoneDoneMemo/View/View/KeyboardTextView.xib
@@ -12,7 +12,6 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KeyboardTextView" customModule="DoneDoneMemo" customModuleProvider="target">
             <connections>
-                <outlet property="sendButton" destination="1oU-qt-gIH" id="DbP-nd-Ms7"/>
                 <outlet property="textField" destination="XF8-7f-NkM" id="5xg-lu-bYh"/>
             </connections>
         </placeholder>
@@ -21,18 +20,8 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1oU-qt-gIH">
-                    <rect key="frame" x="266" y="6" width="50" height="38"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="50" id="bNG-ON-uFM"/>
-                    </constraints>
-                    <state key="normal" title="Button"/>
-                    <connections>
-                        <action selector="tapButton:" destination="-1" eventType="touchUpInside" id="CHi-4T-ihe"/>
-                    </connections>
-                </button>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="XF8-7f-NkM">
-                    <rect key="frame" x="4" y="6" width="258" height="38"/>
+                    <rect key="frame" x="4" y="6" width="312" height="38"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" spellCheckingType="no" returnKeyType="done"/>
@@ -41,12 +30,9 @@
             <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="XF8-7f-NkM" secondAttribute="bottom" constant="6" identifier="a" id="37R-IM-ca3"/>
-                <constraint firstAttribute="bottom" secondItem="1oU-qt-gIH" secondAttribute="bottom" constant="6" identifier="d" id="8Ua-Jn-O4g"/>
-                <constraint firstAttribute="trailing" secondItem="1oU-qt-gIH" secondAttribute="trailing" constant="4" identifier="e" id="BZX-18-7FP"/>
                 <constraint firstItem="XF8-7f-NkM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="4" identifier="b" id="Bgf-nv-93f"/>
-                <constraint firstItem="1oU-qt-gIH" firstAttribute="leading" secondItem="XF8-7f-NkM" secondAttribute="trailing" constant="4" identifier="f" id="Clk-NP-G6Y"/>
                 <constraint firstItem="XF8-7f-NkM" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="6" identifier="c" id="XCv-Y6-C66"/>
-                <constraint firstItem="1oU-qt-gIH" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="6" identifier="g" id="epm-f8-Dwh"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="XF8-7f-NkM" secondAttribute="trailing" constant="4" id="dQa-zN-iOY"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
