--- a/DonePad/View/View/KeyboardTextView.xib
+++ b/DonePad/View/View/KeyboardTextView.xib
@@ -13,11 +13,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="KeyboardTextView" customModule="DonePad" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j7g-w9-BIA">
-                    <rect key="frame" x="52" y="8" width="260" height="34"/>
+                    <rect key="frame" x="52" y="8" width="216" height="46"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="tby-k0-aIH"/>
@@ -26,9 +26,10 @@
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                 </textView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GBf-X5-7fv">
-                    <rect key="frame" x="0.0" y="0.0" width="44" height="50"/>
+                    <rect key="frame" x="8" y="8" width="36" height="36"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="44" id="Bg8-48-tUe"/>
+                        <constraint firstAttribute="height" constant="36" id="chH-7l-iAx"/>
+                        <constraint firstAttribute="width" constant="36" id="nvH-PT-xCN"/>
                     </constraints>
                     <state key="normal" image="ic_alarm"/>
                     <state key="highlighted" image="ic_alarm"/>
@@ -36,30 +37,43 @@
                         <action selector="tapTimerButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="ZHE-pc-4i5"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eHj-zW-NLt">
+                    <rect key="frame" x="276" y="8" width="36" height="36"/>
+                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="36" id="4Ui-bq-r0q"/>
+                        <constraint firstAttribute="width" constant="36" id="cY8-zK-Sez"/>
+                    </constraints>
+                    <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <state key="normal" image="ic_arrow_up"/>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="j7g-w9-BIA" secondAttribute="trailing" constant="8" identifier="111" id="3sm-tJ-s8i"/>
-                <constraint firstItem="GBf-X5-7fv" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="H8O-9e-tsz"/>
+                <constraint firstItem="eHj-zW-NLt" firstAttribute="leading" secondItem="j7g-w9-BIA" secondAttribute="trailing" constant="8" id="EdS-I6-dUT"/>
                 <constraint firstItem="j7g-w9-BIA" firstAttribute="leading" secondItem="GBf-X5-7fv" secondAttribute="trailing" constant="8" id="H9u-6f-o3Q"/>
-                <constraint firstItem="GBf-X5-7fv" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="ZQH-k0-ytf"/>
+                <constraint firstItem="eHj-zW-NLt" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="So0-XJ-Dbm"/>
+                <constraint firstItem="GBf-X5-7fv" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="ZQH-k0-ytf"/>
                 <constraint firstItem="j7g-w9-BIA" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" identifier="444" id="aJY-tk-fkK"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="j7g-w9-BIA" secondAttribute="bottom" constant="8" identifier="222" id="fgq-Jb-PO3"/>
-                <constraint firstItem="GBf-X5-7fv" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="jFy-ih-Wba"/>
-                <constraint firstItem="GBf-X5-7fv" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="q1g-a5-IhR"/>
+                <constraint firstItem="eHj-zW-NLt" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" constant="-8" id="ggX-gG-QfX"/>
+                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="GBf-X5-7fv" secondAttribute="bottom" constant="8" id="iMJ-GC-Oz2"/>
+                <constraint firstItem="GBf-X5-7fv" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="jFy-ih-Wba"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="sendButton" destination="eHj-zW-NLt" id="zJa-DS-OBq"/>
                 <outlet property="textView" destination="j7g-w9-BIA" id="ai0-Nh-wwp"/>
                 <outlet property="timerButton" destination="GBf-X5-7fv" id="Q3M-ao-GKU"/>
             </connections>
-            <point key="canvasLocation" x="26" y="365"/>
+            <point key="canvasLocation" x="26" y="371"/>
         </view>
     </objects>
     <resources>
         <image name="ic_alarm" width="24" height="24"/>
+        <image name="ic_arrow_up" width="24" height="24"/>
     </resources>
 </document>
