+ボタンで入力内容の登録編集ができる

--- a/DonePad/View/View/KeyboardTextView.xib
+++ b/DonePad/View/View/KeyboardTextView.xib
@@ -44,6 +44,9 @@
                         <constraint firstAttribute="width" constant="44" id="cY8-zK-Sez"/>
                     </constraints>
                     <state key="normal" image="ic_add_circle"/>
+                    <connections>
+                        <action selector="tapAddButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="izS-1B-mro"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
